trunk/Archive2/59/834f93765a5026/output
main.cpp:12:12: error: designated initializers are a C99 feature [-Werror,-Wc99-extensions]
   A bi = {.a=1,.b=3};
           ^~~~
main.cpp:12:17: error: designated initializers are a C99 feature [-Werror,-Wc99-extensions]
   A bi = {.a=1,.b=3};
                ^~~~
main.cpp:12:6: warning: unused variable 'bi' [-Wunused-variable]
   A bi = {.a=1,.b=3};
     ^
1 warning and 2 errors generated.
